Fix overflowing images in posts.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -585,6 +585,8 @@
 		box-shadow: 0 2px 0 0 _palette(border);
 		margin: 0 0 _size(element-margin) 0;
 		padding: $box-padding;
+		img
+			{ max-width: 100%; }
 
 		> :last-child {
 			margin-bottom: 0;
